@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-06-02T01:23:45Z",
+  "timestamp" : "2022-06-02T08:20:48Z",
   "count_outdated" : 276,
   "uniques_outdated" : 177,
-  "count" : 304,
+  "count" : 303,
   "uniques" : 196,
   "clones" : [
     {
       "timestamp": "2022-05-19T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
