@@ -1,3 +1,10 @@
+2022-06-02T08:20:48Z:
+* notice: last 14d: unq all: 12 27
+* notice: prev accum: outdated-unq outdated-all / unq all: 177 276 / 196 304
+* notice: next accum: outdated-unq outdated-all / unq all: 177 276 / 196 303
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
+* notice: removed / changed dates: [] / [2022-05-19]
+
 2022-06-02T01:23:45Z:
 * notice: last 14d: unq all: 12 28
 * notice: prev accum: outdated-unq outdated-all / unq all: 176 273 / 196 302
